dark mode switch fix

--- a/src/minimal/darkTheme.less
+++ b/src/minimal/darkTheme.less
@@ -81,7 +81,7 @@
     background-color: @blue;
   }
   .mdl-switch.is-checked .mdl-switch__track {
-    background-color: @blue;
+    background-color: rgb(110, 127, 221);
   }
 
   .mdl-layout.is-upgraded .mdl-layout__tab.is-active::after {
